tests/inter/fail/illegal-038.dcf
void main(){
    const int a = 15;

    // Cannot assign to a constant
    for (;a<30;a++){}

}